# ragaton

./: CHANGELOG.md  agent.py  agent_utils.py  app.py  database.py  docker-compose.yml  eleven.py  main.py  pyproject.toml  settings.py  st_utils.py  weather.py  whisper.py  youtube.py
.flox/: env.json
.flox/env/: manifest.toml
components/: news_ui.py  youtube_ui.py
pages/: news.py  voice.py  youtube.py
