[project]
name = "langlit"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "html-to-markdown>=2.6.5",
    "langchain>=1.0.4",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pydantic-settings>=2.11.0",
    "readability-lxml>=0.8.4.1",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "ruff>=0.14.4",
]
