[project]
name = "langlit"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "bs4>=0.0.2",
    "elevenlabs>=2.22.0",
    "html-to-markdown>=2.6.5",
    "langchain>=1.0.4",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "peewee>=3.18.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "streamlit-audiorecorder>=0.0.6",
    "watchdog>=6.0.0",
    "yt-dlp>=2025.10.22",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "ruff>=0.14.4",
]
